# SentinelAI

./: .gitignore  ARCHITECTURE.md  CLI_USAGE.md  DEPLOYMENT.md  PROJECT_STRUCTURE.md  README.md  pyproject.toml  sentinelai.yaml
backend/: __init__.py  build_training_data.py  check_db.py  check_incidents.py  config.py  database.py  main.py  requirements.txt  show_secheam.py  test_analyzers.py  test_migration.py  training_data.jsonl
backend/core/: exceptions.py  logging_config.py  migrator.py
backend/models/: __init__.py  tables.py
backend/routers/: alerts.py  chat.py  face.py  health.py  reports.py  system.py
backend/services/: activity_service.py  alert_service.py  anomaly_engine.py  baseline_engine.py  face_service.py  health_service.py  incident_engine.py  intent_classifier.py  llm_service.py  ollama_client.py  rag_service.py  report_engine.py  scheduler.py
backend/utils/: pdf_generator.py  prompt_builder.py
data/: sentinelai.db
finetune/: ceack.py  create_dataset.py  dedupe_outputs.py  hackernews_scraper.py  merge_dataset.py  reddit_scraper.py  stackoverflow_scraper.py  training_data.jsonl  training_data_deduped.jsonl  validate_dataset.py  wiki_scraper.py
finetune/dataset/: ETW.jsonl  hackernews_raw.json  mitre_attack.jsonl  stackoverflow_raw.json  sysinternals.jsonl  sysmon.jsonl  windows_documentation.jsonl  windows_processes.jsonl
frontend/: README.md  index.html  package-lock.json  package.json
sentinelai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sentinelai_cli/: __init__.py  main.py  utils.py
(+18 files in other folders)
