[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelai"
version = "2.0.0"
description = "Local AI-powered system monitoring and behavioural anomaly detection"
authors = [
    {name = "Prathik", email = "prathik@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.0",
    "python-dotenv==1.0.1",
    "pydantic>=2.8.0",
    "sqlalchemy>=2.0.50",
    "aiosqlite==0.20.0",
    "psutil==5.9.8",
    "pynput==1.7.7",
    "ollama==0.2.1",
    "httpx==0.27.0",
    "reportlab==4.2.0",
    "jinja2==3.1.4",
    "loguru==0.7.2",
    "websockets==12.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "black==24.4.2",
]

[project.scripts]
sentinelai = "sentinelai_cli.main:app"

[tool.setuptools]
packages = ["backend", "sentinelai_cli"]
